# audible_api

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: bookmarks.rs  library.rs
migrations/001-auth/: up.sql
src/: auth.rs  error.rs  lib.rs  locales.json  localization.rs  register.rs
src/api/: account.rs  annotations.rs  app.rs  bages.rs  catalog.rs  collections.rs  content.rs  customer.rs  last_positions.rs  library.rs  mod.rs  orders.rs  pages.rs  recommendations.rs  sidecar.rs  stats.rs  user.rs  wishlist.rs
src/auth/: auth.rs  auth_headers.rs  browser_signin.rs  localization.rs  mod.rs  oauth.rs  register.rs  router.rs  sign_in.rs  signin_constructor.rs
src/db/: auth.rs  mod.rs
templates/audible_signin/: signin.html  success.html
