[package]
name = "audible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
base64 = "0.22.1"
chrono = "0.4.38"
console = "0.15.8"
dotenvy = "0.15.7"
hex = "0.4.3"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
uuid = { version = "1.9.1", features = ["v4"] }
webbrowser = "1.0.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
axum-macros = "0.4.1"
deadpool-sqlite = "0.8.1"
deadpool = "0.12.1"

[build-dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
include_dir = "0.7.4"
